--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.6",
-    "express": "^4.17.1"
+    "webpack-cli": "^3.3.12"
   }
 }
