--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
+    "helmet": "^4.2.0",
     "jquery": "^3.5.1",
     "mongoose": "^5.10.12",
     "multer": "^1.4.2",
@@ -32,8 +33,6 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.6",
-    "webpack-cli": "^3.3.12"
+    "express": "^4.17.1"
   }
 }
