--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
     "cron": "^1.8.2",
+    "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
@@ -29,10 +30,9 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.16",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "nodemon": "^2.0.6",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "express": "^4.17.1"
+    "nodemon": "^2.0.6"
   }
 }
