--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^4.2.0",
     "jimp": "^0.16.1",
     "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.10.15",
     "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
