--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.16",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "serve-favicon": "^2.5.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
