--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "nodemailer": "^6.4.16",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "serve-favicon": "^2.5.0",
+    "telegraf": "^3.38.0",
+    "telegraf-inline-menu": "^5.3.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
