--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.8.0",
     "handlebars": "^4.7.6",
     "helmet": "^4.2.0",
+    "http-build-query": "^0.7.0",
     "jimp": "^0.16.1",
     "jquery": "^3.5.1",
     "materialize-css": "^1.0.0-rc.2",
@@ -39,7 +40,8 @@
     "serve-favicon": "^2.5.0",
     "telegraf": "^3.38.0",
     "telegraf-inline-menu": "^5.3.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
